--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ ga_domain: 0x77.com
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "自留地"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/touxiang.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
