--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
+#weibo_username:     huxpro
+zhihu_username:     /people/niniu
+github_username:    goobey
 #twitter_username:  huxpro
-facebook_username:  huxpro
+#facebook_username:  huxpro
 # linkedin_username:  firstname-lastname-idxxxx
 
 
@@ -71,7 +71,7 @@ ga_domain: 0x77.com
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "自留地"
-sidebar-avatar: /img/touxiang.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/tx.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -88,12 +88,12 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "Su",
-        href: "http://su.gallery/"
-    },{
-        title: "乱序",
-        href: "http://mida.re/"
-    },
+#friends: [
+#    {
+#        title: "Su",
+#        href: "http://su.gallery/"
+#    },{
+#        title: "乱序",
+#        href: "http://mida.re/"
+#    },
 ]
