--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 泥牛的博客 | goobey Blog
 header-img: img/home-bg.jpg
 email: goobey@vip.qq.com
 description: "待补充"
-keyword: "goobey, 博客, 个人网站, 互联网, 产品,"
+keyword: "goobey, 博客, 个人网站, 互联网, 产品"
 url: "https://www.0x77.com"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
