--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-#title: goobey Blog
+title: goobey Blog
 SEOTitle: 泥牛的博客 | goobey Blog
 header-img: img/home-bg.jpg
 email: goobey@vip.qq.com
@@ -13,7 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 #weibo_username:     huxpro
-zhihu_username:     /people/niniu
+zhihu_username:     niniu
 github_username:    goobey
 #twitter_username:  huxpro
 #facebook_username:  huxpro
