--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: goobey Blog
+#title: goobey Blog
 SEOTitle: goobey Blog
 header-img: img/home-bg.jpg
 email: goobey@vip.qq.com
