--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 #title: goobey Blog
-SEOTitle: goobey Blog
+#SEOTitle: goobey Blog
 header-img: img/home-bg.jpg
 email: goobey@vip.qq.com
 description: "待补充"
