--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 #weibo_username:     huxpro
-zhihu_username:     /pepple/niniu
+zhihu_username:     niniu
 github_username:    goobey
 #twitter_username:  huxpro
 #facebook_username:  huxpro
@@ -88,12 +88,5 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "Su",
-        href: "http://su.gallery/"
-    },{
-        title: "乱序",
-        href: "http://mida.re/"
-    }
-]
+#friends: [
+#]
